// SPDX-FileCopyrightText: Contributors to the GXF project
//
// SPDX-License-Identifier: Apache-2.0

edition = "2024";

package org.lfenergy.gxf.publiclighting.contracts.internal.auditlogging;

message LogItemMessage {
  Direction direction = 1;
  string organisation_identification = 2;
  string device_identification = 4;
  bytes raw_data = 5;
  int32 raw_data_size = 6;
}

enum Direction {
  FROM_DEVICE = 0;
  TO_DEVICE = 1;
}
